@@ -1,5 +1,11 @@
 2009-05-17  Dennis Cranston  <dennis_cranston@yahoo.com>
 
+	* gsearchtool-callbacks.c,
+	* gsearchtool-support.c, 
+	* gsearchtool.c:  Fix build when using MAINTAINER_CFLAGS.
+	
+2009-05-17  Dennis Cranston  <dennis_cranston@yahoo.com>
+
 	* configure.ac, Makefile.am: Use gio-unix.
 	* gsearchtool-callbacks.c: Remove gnome-desktop-item.h
 	* gsearchtool-support.c (open_file_with_filemanager):  
